--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -48,7 +48,7 @@ android {
     buildTypes {
 	  debug { 
 		 ndk {
-		   abiFilters "armeabi-v7a"
+		   abiFilters 'armeabi-v7a'
 		   //abiFilters ABI_FILTERS
 		 }
 	   }
@@ -56,7 +56,7 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
 		ndk {
-		   abiFilters "armeabi-v7a"
+		   abiFilters 'armeabi-v7a'
 		   //abiFilters ABI_FILTERS
 		 }
             signingConfig signingConfigs.debug
