--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  
+  # Enable generation of localized Strings from arb files.
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
