--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "MiniAudioStandAlone"]
-	path = MiniAudioStandAlone
+[submodule "miniaudio"]
+	path = miniaudio
 	url = https://github.com/imandana/MiniAudioStandAlone
