--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = platform_channel
+PRODUCT_NAME = jammates_miniaudio
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.platformChannel
+PRODUCT_BUNDLE_IDENTIFIER = com.example.jammatesMiniaudio
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2014 The Flutter Authors. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
