--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   path_provider: ^2.1.0
   http: ^1.1.0
+  permission_handler: ^10.4.3
 
 dev_dependencies:
   flutter_test:
