--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,6 +26,7 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
+    namespace "com.example.jammates"
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
@@ -34,9 +35,22 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+
+    sourceSets {
+        main.java.srcDirs += 'src/main/java'
+
+        main {
+            jniLibs.filter.include("**/*")
+
+        }
+    }
+
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.jammates_miniaudio"
+        applicationId "com.example.my_app"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion flutter.minSdkVersion
@@ -45,10 +59,11 @@ android {
         versionName flutterVersionName
     }
 
+ 
     buildTypes {
 	  debug { 
 		 ndk {
-		   abiFilters "armeabi-v7a", "arm64-v8a"
+		   abiFilters "armeabi-v7a"//, "arm64-v8a"
 		   //abiFilters ABI_FILTERS
 		 }
 	   }
@@ -56,22 +71,18 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
 		ndk {
-		   abiFilters "armeabi-v7a", "arm64-v8a"
+		   abiFilters "armeabi-v7a"//, "arm64-v8a"
 		   //abiFilters ABI_FILTERS
 		 }
             signingConfig signingConfigs.debug
         }
     }
-	
-	sourceSets {
-        main {
-            jniLibs.filter.include("**/*")
-
-        }
-    }
-	
 }
 
 flutter {
     source '../..'
+}
+
+dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
