--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.jammates_miniaudio">
-   <application
-        android:label="jammates_miniaudio"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+	<uses-permission android:name="android.permission.INTERNET"/>
+
+    <application
+        android:label="my_app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
