--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -63,7 +63,7 @@ android {
     buildTypes {
 	  debug { 
 		 ndk {
-		   abiFilters "armeabi-v7a"//, "arm64-v8a"
+		   abiFilters "armeabi-v7a", "arm64-v8a"
 		   //abiFilters ABI_FILTERS
 		 }
 	   }
@@ -71,7 +71,7 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
 		ndk {
-		   abiFilters "armeabi-v7a"//, "arm64-v8a"
+		   abiFilters "armeabi-v7a", "arm64-v8a"
 		   //abiFilters ABI_FILTERS
 		 }
             signingConfig signingConfigs.debug
